--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,5 +1,20 @@
-<div class="five columns centered panel login-window">
-<h2>Change your password</h2>
+<nav class="top-bar">
+  <ul>
+    <li class="name">
+      <h1>
+        <a>ShopStream</a>
+      </h1>
+    </li>
+  </ul>
+  <ul class="right">
+	    <li><a class="small button m-right" href="../sign_in">Sign In</a></li>
+	</ul>
+</nav>
+<div class="row">
+<div class="five columns centered panel devise-window">
+<h2>Change Password</h2>
+<p>Enter your new password bellow, please.</p>
+<hr/>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -11,8 +26,8 @@
   <div><%= f.label :password_confirmation, "Confirm new password" %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><%= f.submit "Change my password", class: 'button' %></div>
 <% end %>
 
-<%= render "users/shared/links" %>
+</div>
 </div>
