--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,18 @@
-<div class="five columns centered panel login-window">
+<nav class="top-bar">
+  <ul>
+    <li class="name">
+      <h1>
+        <a>ShopStream</a>
+      </h1>
+    </li>
+  </ul>
+  <ul class="right">
+	    <li><a class="small button m-right" href="../sign_in">Sign In</a></li>
+	</ul>
+</nav>
+
+<div class="row">
+<div class="five columns centered panel devise-window">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <h3>Forgot your password?</h3>
 		<p>Enter your email address below and we’ll send you instructions.</p>
@@ -12,4 +26,5 @@
 	<p>
   <i class="foundicon-left-arrow back"></i> <%= link_to "back to login!", new_session_path(resource_name), class: 'small' %>
 	</p>
+</div>
 </div>
