--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,4 +9,6 @@
  *= require devise
  *= require general_enclosed_foundicons_ie7
  *= require general_enclosed_foundicons
+ *= require general_foundicons
+ *= require general_foundicons_ie7
  */
