--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -38,16 +38,19 @@
       Beep on sales
     </label>
   </div>
+	
 </div>
 <div class="row">
   <div class="ten columns offset-by-two">
-    <button class="button" {{action save target="controller"}}>Save</button>
+    <button class="button success" {{action save target="controller"}}>Save Changes</button>
   </div>
-</div>
-<div class="row content">
-  <div class="ten columns offset-by-two">
-    <a class="button alert" {{action deleteShop target="controller"}} data-confirm="Are you sure? This action cannot be undone.">Delete shop</a>
-  </div>
+	<div class="ten columns offset-by-two">
+	<hr/>
+	<h6>Need to delete this store?</h6>
+	<p> Once your store is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
+
+	<p> <b>I understand this is irreversible:</b>  <a class="button tiny alert" {{action deleteShop target="controller"}} data-confirm="Are you sure? This action cannot be undone.">Delete Shop</a></p>
+	</div>
 </div>
 
 {{#if isCustomShop}}
