adding devise profile edit link

--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -39,7 +39,7 @@
       <li class="has-dropdown">
         <a href="#">{{SS.user.email}}</a>
         <ul class="dropdown">
-					<li><a href="#"> Account settings</a></li>
+					<li><a href="/users/edit"> Account settings</a></li>
           <li><a href="/users/sign_out" data-method="delete">Log out</a></li>
         </ul>
       </li>
