issue #7 adding devise users/edit layout

--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -75,3 +75,9 @@
 	text-decoration: underline;
 	font-size: 0.9em;
 }
+
+/*edit profile*/
+#edit_profile{
+	font-size: 0.38em;
+	margin-top: -14px;
+}
