--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,55 +1,29 @@
-<nav class="top-bar">
-	<div class="row">
-  <ul>
-    <li class="name">
-      <h1>
-        <a id="edit_profile" href="../">ShopStream</a>
-      </h1>
-    </li>
-    <li class="toggle-topbar"><a href="#"></a></li>
-  </ul>
-  <section>
-    <ul class="right">
-      <li class="divider show-for-medium-and-up"></li>
-      <li class="has-dropdown">
-        <a href="#"><%= @user.email %></a>
-        <ul class="dropdown">
-					<li><a href="/users/edit"> Account settings</a></li>
-          <li><a href="/users/sign_out" data-method="delete">Log out</a></li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-</div>
-</nav>
-
 <div class="row">
 	<div class="six columns">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <h2>Edit profile</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+      <div><%= f.label :email %><br />
+      <%= f.email_field :email %></div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+      <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+      <div><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+      <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit "Update My Account!", :class => "button success"  %></div>
-<% end %>
-</div>
-<div class="six columns">
-<h6>Need to cancel this account?</h6>
-<p> Once your account is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
+      <div><%= f.submit "Update My Account!", class: 'button success'  %></div>
+    <% end %>
+  </div>
+  <div class="six columns">
+    <h6>Need to cancel this account?</h6>
+    <p> Once your account is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
 
-<p> <b>I understand this is irreversible:</b> <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => "button tiny alert" %>.</p>
-
+    <p> <b>I understand this is irreversible:</b> <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button tiny alert' %>.</p>
 	</div>
 </div>
