--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,20 +1,7 @@
-<nav class="top-bar">
-  <ul>
-    <li class="name">
-      <h1>
-        <a>ShopStream</a>
-      </h1>
-    </li>
-  </ul>
-  <ul class="right">
-	    <li><a class="small button m-right" href="sign_in">Sign In</a></li>
-	</ul>
-</nav>
-
 <div class="row">
-	<div class="eight columns centered">
-		<h2 class="center">Start your free 14-day trial today.</h2>
-		<h4 class="subheader center">No credit card required. World-class support and a great service are just a few clicks away. Let's sell more!</h4>
+	<div class="eight columns centered text-center">
+		<h2>Start your free 14-day trial today.</h2>
+		<h4 class="subheader">No credit card required. World-class support and a great service are just a few clicks away. Let's sell more!</h4>
 	</div>
 </div>
 <div class="row">
@@ -25,21 +12,26 @@
 	    	<label>Email Address:</label> <%= f.email_field :email, placeholder: 'myname@mycompany.com', class: 'twelve' %><br/>
 	    	<label>Password:</label><%= f.password_field :password, placeholder: 'desired password', class: 'twelve' %>
 	    	<label>Password Confirmation:</label><%= f.password_field :password_confirmation, placeholder: 'repeat your password', class: 'twelve' %>
-		<hr/>
+
 	    	<%= f.submit "Start Your Free Trial Now!", class: 'button success' %>
 				<p class="terms-notice">by clicking this button, you accept our <a href="http://shopstream.co/terms">terms</a>.</p>
 	  		<% end %>
+		</div>
 
-		</div>
 		<div class="six columns grey-bg">
-			
-  		<i class="signup-icon foundicon-graph"></i> 
-			<h5 class="benefit-header">Feel Your Store Beat in Real Time</h5>
-			<p class="benefit-p"> We track your store's most useful real time metrics, so you can focus in the only thing that matters. Sales!  </p>
-			<i class="signup-icon second foundicon-idea"></i> 
-			<h5 class="benefit-header">Awesome Insights to Help You Understand Your Customers</h5>
-			<p class="benefit-p"> ShopStream's real time metrics allow you to track how real time actions, such as tweeting and sending email marketing campaigns impact your conversions.  <br/><br/><br/><br/></p>
+			<h5 class="benefit-header">
+	  		<i class="foundicon-graph"></i> 
+				Feel Your Store Beat in Real Time
+			</h5>
+			<p class="benefit-p"> We track your store's most useful real time metrics, so you can focus in the only thing that matters. Sales!</p>
+ 
+			<h5 class="benefit-header">
+				<i class="second foundicon-idea"></i>
+				Awesome Insights to Help You Understand Your Customers
+			</h5>
+			<p class="benefit-p"> ShopStream's real time metrics allow you to track how real time actions, such as tweeting and sending email marketing campaigns impact your conversions.
 		</div>
+		
 		<div class="clear">
 		</div>
 	</div>
