--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -33,13 +33,17 @@
           <li><a {{action goToAddShop href=true}}>Add shop...</a></li>
         </ul>
       </li>
-			<li class="divider show-for-medium-and-up"></li>
-			<li>{{#if isShop}}<a {{action goToSettings href=true}}><i class="foundicon-tools"></i> </a>{{/if}}</li>
+
+      {{#if isShop}}
+  			<li class="divider show-for-medium-and-up"></li>
+  			<li><a {{action goToSettings href=true}}><i class="foundicon-tools"></i></a></li>
+      {{/if}}
+
       <li class="divider show-for-medium-and-up"></li>
       <li class="has-dropdown">
         <a href="#">{{SS.user.email}}</a>
         <ul class="dropdown">
-					<li><a href="/users/edit"> Account settings</a></li>
+					<li><a href="/users/edit">Account settings</a></li>
           <li><a href="/users/sign_out" data-method="delete">Log out</a></li>
         </ul>
       </li>
