--- a/app/assets/stylesheets/general_enclosed_foundicons.css.scss
+++ b/app/assets/stylesheets/general_enclosed_foundicons.css.scss
@@ -1,8 +1,8 @@
 /* font-face */
 @font-face {
   font-family: "GeneralEnclosedFoundicons";
-  src: url("fonts/general_enclosed_foundicons.eot");
-  src: url("fonts/general_enclosed_foundicons.eot?#iefix") format("embedded-opentype"), url("fonts/general_enclosed_foundicons.woff") format("woff"), url("../fonts/general_enclosed_foundicons.ttf") format("truetype"), url("../fonts/general_enclosed_foundicons.svg#GeneralEnclosedFoundicons") format("svg");
+  src: asset-url("fonts/general_enclosed_foundicons.eot", stylesheet);
+  src: asset-url("fonts/general_enclosed_foundicons.eot?#iefix", stylesheet) format("embedded-opentype"), asset-url("fonts/general_enclosed_foundicons.woff", stylesheet) format("woff"), asset-url("fonts/general_enclosed_foundicons.ttf", stylesheet) format("truetype"), asset-url("fonts/general_enclosed_foundicons.svg#GeneralEnclosedFoundicons", stylesheet) format("svg");
   font-weight: normal;
   font-style: normal;
 }
