--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,30 +1,18 @@
-<nav class="top-bar">
-  <ul>
-    <li class="name">
-      <h1>
-        <a>ShopStream</a>
-      </h1>
-    </li>
-  </ul>
-  <ul class="right">
-	    <li><a class="small button m-right" href="../sign_in">Sign In</a></li>
-	</ul>
-</nav>
-
 <div class="row">
-<div class="five columns centered panel devise-window">
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <div class="five columns centered panel devise-window">
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <h3>Forgot your password?</h3>
-		<p>Enter your email address below and we’ll send you instructions.</p>
-		<hr/>
+    <p>Enter your email address below and we’ll send you instructions.</p>
+    <hr/>
     <%= devise_error_messages! %>
 
     <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
 
     <%= f.submit "Recover Password", class: 'button' %>
-  <% end %>
-	<p>
-  <i class="foundicon-left-arrow back"></i> <%= link_to "back to login!", new_session_path(resource_name), class: 'small' %>
-	</p>
-</div>
+    <% end %>
+    <p>
+      <i class="foundicon-left-arrow back"></i>
+      <%= link_to "back to login!", new_session_path(resource_name), class: 'small' %>
+    </p>
+  </div>
 </div>
