--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -4,6 +4,8 @@
     <h3>Forgot your password?</h3>
     <p>Enter your email address below and we’ll send you instructions.</p>
     <hr/>
+    
+    <%= render partial: 'layouts/flashes' %>
     <%= devise_error_messages! %>
 
     <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
