--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,6 +2,8 @@
 	<div class="six columns">
     <h2>Edit profile</h2>
 
+    <%= render partial: 'layouts/flashes' %>
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
 
