--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -9,19 +9,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ShopStream</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= javascript_include_tag 'simple' %>
 </head>
 <body>
-  <nav class="top-bar">
-    <ul>
-      <li class="name">
-        <h1><a>ShopStream</a></h1>
-      </li>
-    </ul>
-    <ul class="right">
-      <li><%= link_to 'Sign In', new_user_session_path, class: 'small button m-right' %></li>
-      <li><%= link_to 'Sign Up', new_user_registration_path, class: 'small button m-right' %></li>
-    </ul>
-  </nav>
+  <header class="contain-to-grid">
+    <nav class="top-bar">
+      <ul>
+        <li class="name">
+          <h1><%= link_to 'ShopStream', root_path %></h1>
+        </li>
+        <li class="toggle-topbar"><a href="#"></a></li>
+      </ul>
+      <ul class="left">
+        <li class="divider show-for-medium-and-up"></li>
+      </ul>
+      <ul class="right">
+        <% if current_user %>
+          <li>
+            <%= link_to root_path do %>
+              <i class="foundicon-left-arrow"></i>
+            <% end %>
+          </li>
+          <li class="divider show-for-medium-and-up"></li>
+          <li class="has-dropdown">
+            <%= link_to current_user.email, '#' %>
+            <ul class="dropdown">
+              <li><%= link_to 'Account settings', edit_user_registration_path %></li>
+              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="has-button"><%= link_to 'Sign In', new_user_session_path, class: 'small button' %></li>
+          <li class="has-button"><%= link_to 'Sign Up', new_user_registration_path, class: 'small button' %></li>
+        <% end %>
+      </ul>
+    </nav>
+  </header>
 
   <%= yield %>
 </body>
