--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,20 +1,22 @@
-<div class="row">
+<div class="row login">
   <div class="five columns centered panel devise-window">
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <h3>Forgot your password?</h3>
-    <p>Enter your email address below and we’ll send you instructions.</p>
-    <hr/>
-    
-    <%= render partial: 'layouts/flashes' %>
-    <%= devise_error_messages! %>
+    <%= simple_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |f| %>
+      <h3>Forgot your password?</h3>
+      <h4 class="subheader">Enter your email address below and we’ll send you instructions.</h4>
 
-    <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
+      <%= render partial: 'layouts/flashes' %>
+      <%= f.error_notification %>
 
-    <%= f.submit "Recover Password", class: 'button' %>
+      <%= f.input :email, label: false, placeholder: 'Email' %>
+
+      <%= f.button :submit, 'Recover password' %>
     <% end %>
+
     <p>
-      <i class="foundicon-left-arrow back"></i>
-      <%= link_to "back to login!", new_session_path(resource_name), class: 'small' %>
+      <%= link_to new_session_path(resource_name), class: 'small' do %>
+        <i class="foundicon-left-arrow back"></i>
+        back to login
+      <% end %>
     </p>
   </div>
 </div>
