--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,31 +1,26 @@
 <div class="row">
-	<div class="six columns">
-    <h2>Edit profile</h2>
+  <div class="seven columns">
+    <h3>Edit profile</h3>
 
-    <%= render partial: 'layouts/flashes' %>
+    <%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), html: { method: :put } do |f| %>
+      <%= render partial: 'layouts/flashes' %>
+      <%= f.error_notification %>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+      <%= f.input :email %>
+      <%= f.input :password, placeholder: "leave blank if you don't want to change it" %>
+      <%= f.input :password_confirmation %>
+      <%= f.input :current_password %>
 
-      <div><%= f.label :email %><br />
-      <%= f.email_field :email %></div>
-
-      <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password %></div>
-
-      <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
-
-      <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password %></div>
-
-      <div><%= f.submit "Update My Account!", class: 'button success'  %></div>
+      <%= f.button :submit, 'Update my account', class: 'success' %>
     <% end %>
   </div>
-  <div class="six columns">
+  <div class="five columns">
     <h6>Need to cancel this account?</h6>
-    <p> Once your account is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
+    <p>Once your account is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
 
-    <p> <b>I understand this is irreversible:</b> <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button tiny alert' %>.</p>
-	</div>
+    <p>
+      <b>I understand this is irreversible:</b>
+      <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button tiny alert' %>
+    </p>
+  </div>
 </div>
