--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -35,20 +35,23 @@
       Beep on sales
     </label>
   </div>
-	
 </div>
 <div class="row">
   <div class="ten columns offset-by-two">
     <button class="button success" {{action save target="controller"}}>Save Changes</button>
   </div>
 
-	<div class="ten columns offset-by-two">
-  	<hr/>
-  	<h6>Need to delete this store?</h6>
-  	<p> Once your store is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you won't be charged again but you are responsible for any charges already incurred.</p>
+  <div class="ten columns offset-by-two">
+    <hr/>
+    <h6>Need to delete this store?</h6>
+    <p>Once your store is deleted, all the information captured will be immediately and permanently deleted. If you have a paying account you will not be charged again but you are responsible for any charges already incurred.</p>
 
-  	<p><b>I understand this is irreversible:</b> <a class="button tiny alert" {{action deleteShop target="controller"}}>Delete Shop</a></p>
-	</div>
+    {{#if isCustomShop}}
+      <p><b>I understand this is irreversible:</b> <a class="button tiny alert" {{action deleteShop target="controller"}}>Delete Shop</a></p>
+    {{else}}
+      <p>You should delete this store by uninstalling "shopstream" app from your Shopify shop.
+    {{/if}}
+  </div>
 </div>
 
 {{#if isCustomShop}}
@@ -56,14 +59,14 @@
     <div class="twelve column">
       <div class="">
         <h4>Tracking Code</h4>
-				<div class="panel">
+        <div class="panel">
         <p>To start using ShopStream, you need to install our javascript tracker in your store. It is really simple, just add the following code to all pages in your website:</p>
-				<code>
+        <code>
         <p><pre>&lt;script type=&quot;text/javascript&quot; src=&quot;{{trackerScriptUrl}}&quot;&gt;&lt;/script&gt;</pre></p>
-				</code>
-				
+        </code>
+
         <p>Then, add the tracker to your website checkout:</p>
-				<code>
+        <code>
         <p><pre>
 _shopstream.addOrder(
   "Order name", // order name, required
@@ -79,23 +82,23 @@ _shopstream.addItem(
 );
 _shopstream.trackOrder();
         </pre></p>
-			</code>
-			</div>
+      </code>
+      </div>
 
-			<!-- <h5>Not a developer? </h5>
-				<label>Email the setup instructions to your developers:</label>
-				<div class="row">
-				  <div class="five columns">
-				    <div class="row collapse">
-				      <div class="eight mobile-three columns">
-				        <input type="text" value="your developer's email"/>
-				      </div>
-				      <div class="four mobile-one columns">
-				        <a href="mailto:contact@shopstream.co" class="postfix button expand">Send Instructions</a>
-				      </div>
-				    </div>
-				  </div>
-				</div> -->
+      <!-- <h5>Not a developer? </h5>
+        <label>Email the setup instructions to your developers:</label>
+        <div class="row">
+          <div class="five columns">
+            <div class="row collapse">
+              <div class="eight mobile-three columns">
+                <input type="text" value="your developer's email"/>
+              </div>
+              <div class="four mobile-one columns">
+                <a href="mailto:contact@shopstream.co" class="postfix button expand">Send Instructions</a>
+              </div>
+            </div>
+          </div>
+        </div> -->
       </div>
     </div>
   </div>
