include user email in instruction email for developer

--- a/app/views/instructions_mailer/instructions.html.erb
+++ b/app/views/instructions_mailer/instructions.html.erb
@@ -1,7 +1,7 @@
 <p>Hello,</p>
 
 <p>
-  We are contacting you because the owner of <%= @shop.name %> needs your help with setting up ShopStream tracking for their shop.
+  We are contacting you on behalf of the owner of <%= @shop.name %> (<%= @shop.user.email %>) because they need your help with setting up ShopStream tracking for their shop.
 </p>
 
 <p>To start tracking, simply add this line to every page of your shop.</p>
