--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,6 +12,7 @@
         <%= f.error_notification %>
 
         <%= f.input :email, label: 'Email address', placeholder: 'myname@mycompany.com' %>
+        <%= f.input :name, label: 'Name', placeholder: 'John Doe' %>
         <%= f.input :password, placeholder: 'Desired password' %>
         <%= f.input :password_confirmation, placeholder: 'Confirm' %>
 
