--- a/app/views/reports_mailer/daily.html.erb
+++ b/app/views/reports_mailer/daily.html.erb
@@ -1,4 +1,4 @@
-<p>Hello,</p>
+<p>Hello <%= @shop.user.name %>,</p>
 
 <p>We've been tracking your store <%= @shop.name %> and here's your daily report:</p>
 
@@ -7,12 +7,14 @@
   Conversion Rate: <%= @shop.conversion_rate %><br>
   Total Sales Today: <%= number_to_currency @shop.total_sales_today %><br>
 </p>
+
 <% unless @shop.top_links.blank? && @shop.top_searches.blank? && @shop.top_products.blank? %>
-<p>Your Tops:</p>
+  <p>Your Tops:</p>
 <% end %>
+
 <p>
   <% unless @shop.top_links.blank? %>
-		Top links:
+    Top links:
     <ul>
       <% @shop.top_links.each do |link| %>
         <li><%= link %></li>
@@ -23,7 +25,7 @@
 
 <p>
   <% unless @shop.top_searches.blank? %>
-		Top searches:
+    Top searches:
     <ul>
       <% @shop.top_searches.each do |search| %>
         <li><%= search %></li>
@@ -34,7 +36,7 @@
 
 <p>
   <% unless @shop.top_products.blank? %>
-		Top products:
+    Top products:
     <ul>
       <% @shop.top_products.each do |product| %>
         <li><%= product %></li>
