--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -7,6 +7,7 @@
       <%= f.error_notification %>
 
       <%= f.input :email %>
+      <%= f.input :name %>
       <%= f.input :password, placeholder: "leave blank if you don't want to change it" %>
       <%= f.input :password_confirmation %>
       <%= f.input :current_password %>
