--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,6 @@
  *= require general_enclosed_foundicons
  *= require general_foundicons
  *= require general_foundicons_ie7
+ *= require accessibility_foundicons
+ *= require accessibility_foundicons_ie7
  */
