link to tracking code

--- a/app/assets/javascripts/templates/shop.handlebars
+++ b/app/assets/javascripts/templates/shop.handlebars
@@ -9,7 +9,8 @@
     {{/unless}}
   {{else}}
       <div class="alert-box alert">
-        Please, install the tracking script.
+        Please, <a {{action goToSettings href=true}}>install the tracking
+          script.</a>
       </div>
   {{/if}}
 {{/if}}
