animate numbers on load/on change, closes #30

--- a/app/assets/javascripts/templates/dashboard.handlebars
+++ b/app/assets/javascripts/templates/dashboard.handlebars
@@ -1,19 +1,23 @@
 <div class="twelve columns">
   <div class="row">
     <div class="two columns metric">
-      <h2>{{percentage conversionRate}}</h2>
+      {{#view SS.AnimatedNumbersView valueBinding="conversionRate"}}<h2>{{percentage view.animatedValue}}</h2>{{/view}}
       {{view SS.GaugeView numberBinding="conversionRate" maxNumberBinding="maxConversionRate"}}
       <h5 class="subheader"><strong>Conversion</strong> rate</h5>
-      <h5 class="subheader short">30 day max <strong>{{percentage maxConversionRate}}</strong></h5>
+      {{#view SS.AnimatedNumbersView valueBinding="maxConversionRate"}}
+        <h5 class="subheader short">30 day max <strong>{{percentage view.animatedValue}}</strong></h5>
+      {{/view}}
     </div>
     <div class="two columns metric">
-      <h2>{{money avgPurchase}}</h2>
+      {{#view SS.AnimatedNumbersView valueBinding="avgPurchase"}}<h2>{{money view.animatedValue}}</h2>{{/view}}
       {{view SS.GaugeView numberBinding="avgPurchase" maxNumberBinding="maxAvgPurchase"}}
       <h5 class="subheader"><strong>Avg</strong> purchase</h5>
-      <h5 class="subheader short">30 day max <strong>{{money maxAvgPurchase}}</strong></h5>
+      {{#view SS.AnimatedNumbersView valueBinding="maxAvgPurchase"}}
+        <h5 class="subheader short">30 day max <strong>{{money view.animatedValue}}</strong></h5>
+      {{/view}}
     </div>
     <div class="two columns metric">
-      <h2>{{money totalSalesToday}}</h2>
+      {{#view SS.AnimatedNumbersView valueBinding="totalSalesToday"}}<h2>{{money view.animatedValue}}</h2>{{/view}}
       <h5 class="subheader"><strong>Total</strong> sales</h5>
       <h5 class="subheader short">Today</h5>
     </div>
