change top labels to say past 24 hours #23

--- a/app/assets/javascripts/templates/dashboard.handlebars
+++ b/app/assets/javascripts/templates/dashboard.handlebars
@@ -27,8 +27,8 @@
   </div>
 
   <div class="row content">
-    {{view SS.DashboardTopColumnView title="Products" subtitle="past 2 days" topItemsBinding="topProducts" classNames="four"}}
-    {{view SS.DashboardTopColumnView title="Links" subtitle="overall" topItemsBinding="topLinks" classNames="four"}}
-    {{view SS.DashboardTopColumnView title="Searches" subtitle="overall" topItemsBinding="topSearches" classNames="four"}}
+    {{view SS.DashboardTopColumnView title="Products" subtitle="past 24 hours" topItemsBinding="topProducts" classNames="four"}}
+    {{view SS.DashboardTopColumnView title="Links" subtitle="past 24 hours" topItemsBinding="topLinks" classNames="four"}}
+    {{view SS.DashboardTopColumnView title="Searches" subtitle="past 24 hours" topItemsBinding="topSearches" classNames="four"}}
   </div>
 </div>
