# of orders in shop selector

--- a/app/assets/javascripts/templates/shop_selector.handlebars
+++ b/app/assets/javascripts/templates/shop_selector.handlebars
@@ -13,6 +13,8 @@
           </small>
         </h5>
         <h6 class="subheader super-short">
+          <strong>{{totalOrdersToday}}</strong> orders
+          /
           <strong>{{money totalSalesToday}}</strong> today
           /
           <strong>{{money avgPurchase}}</strong> avg
