fix simple number animation

--- a/app/assets/javascripts/templates/dashboard.handlebars
+++ b/app/assets/javascripts/templates/dashboard.handlebars
@@ -27,7 +27,7 @@
     <div class="six columns chart">
       {{view SS.FlotChartView seriesBinding="checkoutDistributionSeries" optionsBinding="checkoutDistributionChartOptions" class="co-distr-chart"}}
       {{#view SS.AnimatedNumbersView valueBinding="totalOrdersToday"}}
-        <h5 class="subheader text-center">{{view.animatedValue}} orders today</h5>
+        <h5 class="subheader text-center">{{number view.animatedValue}} orders today</h5>
       {{/view}}
     </div>
   </div>
